# video-summariser

./: .gitignore  README.md  config.json  pyproject.toml
.streamlit/: config.toml
src/video_summariser/: cli.py  processor.py  run_web.py
